--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@
         </plugins>
     </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
-        </dependency>
-    </dependencies>
+    <!--<dependencies>-->
+        <!--<dependency>-->
+            <!--<groupId>log4j</groupId>-->
+            <!--<artifactId>log4j</artifactId>-->
+            <!--<version>1.2.12</version>-->
+        <!--</dependency>-->
+    <!--</dependencies>-->
 
 
 </project>
