--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>service.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/addPatient</url-pattern>
+        <url-pattern>/addTreatment</url-pattern>
+        <url-pattern>/choosePatient</url-pattern>
+        <url-pattern>/history</url-pattern>
+        <url-pattern>/allPatients</url-pattern>
+        <url-pattern>/newPatients</url-pattern>
+    </filter-mapping>
 </web-app>
